src/styles/globals.scss
@import 'scrollbar';
:root {
    --nt-blue: #014dfe;
    --nt-transparent-blue: #014dfe83;
    --nt-green: #5ddb3a;
    --nt-transparent-green: #5ddb3a83;
    --nt-orange: #ff7000;
    --nt-transparent-orange: #ff700083;
    --nt-purple: #b400ff;
    --nt-transparent-purple: #b400ff83;
    --nt-black: #000000;
    --nt-transparent-black: #00000083;
}

body {
    margin: 0;
    padding: 0;
    width: 100%;
    overflow-x: hidden;
    background: linear-gradient( -45deg, var(--nt-transparent-green), var(--nt-transparent-orange), var(--nt-transparent-purple), var(--nt-transparent-black));
    background-size: 400% 400%;
    animation: gradient 10s ease infinite;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

p {
    margin: 0;
    margin-bottom: 10px;
}

@keyframes gradient {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}

